css/style.css
/* Styles */

/* COLORS */
:root {
    --black: #1B1F23;
    --white: #FAFAFA;
    --gray-01: #E1E4E8;
    --gray-02: #959DA5;
    --gray-03: #586069;
    --gray-04: #2F363D;
}

/* TYPOGRAPHY */
@font-face {
    font-family: 'SF-Display';
    src: url(../fonts/SF-Pro-Display-Bold.woff);
    font-weight: bold;
}
@font-face {
    font-family: 'SF-Display';
    src: url(../fonts/SF-Pro-Display-Medium.woff);
    font-weight: 500;
}
@font-face {
    font-family: 'SF-Display';
    src: url(../fonts/SF-Pro-Display-Regular.woff);
    font-weight: normal;
}
@font-face {
    font-family: 'SF-Text';
    src: url(../fonts/SF-Pro-Text-Bold.woff);
    font-weight: bold;
}
@font-face {
    font-family: 'SF-Text';
    src: url(../fonts/SF-Pro-Text-Medium.woff);
    font-weight: 500;
}
@font-face {
    font-family: 'SF-Text';
    src: url(../fonts/SF-Pro-Text-Regular.woff);
    font-weight: normal;
}

h1 {
    font-family: 'SF-Display';
    font-size: 36px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
h2 {
    font-family: 'SF-Display';
    font-size: 36px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
h3 {
    font-family: 'SF-Display';
    font-size: 18px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
h4 {
    font-family: 'SF-Display';
    font-size: 18px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
h5 {
    font-family: 'SF-Display';
    font-size: 16px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
h6 {
    font-family: 'SF-Text';
    font-size: 14px;    
    font-weight: bold;
    line-height: inherit;
    margin: 0;
}
p, li {
    font-family: 'SF-Display';
    font-size: 18px;
    font-weight: normal;
    line-height: 150%;
    margin: 0;
}
a {
    text-decoration: none;
    color: inherit;
    transition: 0.28s;
}
h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, li::selection, a::selection, span::selection, br::selection, strong::selection, img::selection, html::selection {
    background: var(--gray-01);
}
@media screen and (min-width: 450px) {
    h1 {
        font-size: calc(36px + 36* ((100vw - 320px) / 680));
    }
    h2 {
        font-size: calc(30px + 30 * ((100vw - 320px) / (680)));
    }
    h3 {
        font-size: calc(18px + 18 * ((100vw - 320px) / (680)));
    }
    h4 {
        font-size: calc(18px + 6 * ((100vw - 320px) / (680)));
    }
    h5 {
        font-size: calc(16px + 4 * ((100vw - 320px) / (680)));
    }
    h6 {
        font-size: calc(14px + 2 * ((100vw - 320px) / (680)));
    }
    p, li {
        font-size: calc(18px + 6 * ((100vw - 320px) / (680)));
    }
}
@media screen and (min-width: 1000px) {
    h1 {
        font-size: 72px;
    }
    h2 {
        font-size: 60px;
    }
    h3 {
        font-size: 36px;
    }
    h4 {
        font-size: 24px;
    }
    h5 {
        font-size: 20px;
    }
    h6 {
        font-size: 16px;
    }
    p, li {
        font-size: 24px;
    }
}
.medium {
    font-weight: 500;
}
.white {
    color: var(--white);
}
.link:hover {
    opacity: 0.6;
    transition: 0.28s;
}

/* GRID */
.grid {
    display: grid;
    grid-template-columns: minmax(0, 1fr);
}
.c12 {
    grid-column: 2 /12;
}
.c6 {
    grid-column: 4 / 10;
}
.c6-left {
    grid-column: 1 / 7;
}
.c6-right {
    grid-column: 8 / 12;
}
.flex {
    display: flex;
    flex-direction: column;
}

/* IMAGES */
.img {
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    width: 100%;
}
.shadow {
    box-shadow: 0 0 8px 0 var(--gray-01);
}

/* GLOBAL */ 
html {
    color: var(--black);
    background: var(--white);
    overflow-x: hidden;
    margin-top: 3vw;
    margin-bottom: 3vw;
    
    animation: 1.0s ease-in fade-in;
}
img {
    -webkit-user-drag: none;
}
video {
    -webkit-user-drag: none;
}
.section {
    margin-bottom: 3em;
}

/* HEADER */
.hero {
    position: relative;
}
.header {
    display: flex;
    flex-direction: row;
    line-height: 3em;
}
.zk-logo {
    height: 3em;
    transition: 1.5s ease-in-out;
}
.zk-logo:hover {
    transform: rotate(1800deg);
    transition: 15.0s linear;
}
.nav {
    line-height: 3em;
}
.option {
    display: inline;
    margin-left: 6vw;
    font-weight: normal;
    color: var(--gray-03);
}
.selected {
    font-weight: 500;
    color: var(--black);
}
.option:hover {
    color: var(--black);
}
.title {
    display: flex;
    flex-direction: row;
}
.emoji {
    height: 7vw;
    width: 7vw;
    margin-right: 0.5em;
    text-align: center
}

/* SUMMARY */
.summary {
    display: grid;
    grid-template-columns: 100%;
}
.summary-section {
    width: 100%;
}
.summary-item {
    margin-bottom: 1.5em;
}
.subtitle {
    margin-bottom: 0.75em;
    text-transform: uppercase;
    color: var(--gray-03);
}
.divider {
    border-top: 1px solid var(--gray-01);
    margin-bottom: 3em;
}
/* BODY */
.main {
    margin-top: 3em;
    margin-bottom: 3em;
}
.content {
    display: grid;
    grid-column-gap: 5vw;
    grid-template-columns: auto;
    grid-row-gap: 5vw;
    grid-template-rows: auto auto auto;
    position: relative;
    margin-top: 3em;
    margin-bottom: 3em;
}
.exp {
    display: flex;
    flex-direction: column;
    position: relative;
    width: 100%;
    border-radius: 0.625em;
}
.exp:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}
.exp-content {
    display: flex;
    flex-direction: column;
    position: absolute;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.exp-title {
    vertical-align: top;
    text-align: left;
}
.exp-ig {
    background: linear-gradient(45deg, #FF6868 0%, #FF7676 33.33%, #F54EA2 66.67%, #FF41A0 100%);
    background-size: 300% 300%;
    animation: 4.8s ease-in-out infinite ig-gradient;
}
.exp-github {
    background: #24292e;

}
.exp-starbucks {
    background: #00704A;
}
.exp-ideo {
    background: #FFDB6D;
}
/* ... */

